# technical-assessment-weather-console

./: .gitignore  README.md  example.env  myweatherapp.py  pyproject.toml
cli/: application.py  controllers.py
tests/: conftest.py
tests/unit/: test_weather_finder.py
weather/shared/domain/: contracts.py  exceptions.py
weather/shared/infrastructure/: renderers.py
weather/weather_data/application/: services.py
weather/weather_data/domain/: contracts.py  exceptions.py  models.py
weather/weather_data/infrastructure/: accuweather.py  openweather.py
